# sky_vision2

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
include/sky_vision2/camera_config/: sim_cam_config.hpp
sky_vision2/: main.py
src/: aruco_detector_node.cpp
